Level input now has arrows on desktop and brings up num keyboard on mobile; button highlights fixed for mobile

--- a/public/main.css
+++ b/public/main.css
@@ -1,6 +1,7 @@
 /*Global attributes*/
 html {
   touch-action: manipulation;
+  -ms-touch-action: manipulation;
   height: 100%;
   width:auto;
   background-image: url("images/background_seamless-scaled-min.jpg"); 
@@ -218,7 +219,7 @@ li:empty {
   margin-left:-5px;
 }
 
-.submit:active {
+.submit:focus {
   filter:brightness(150%);
 }
 
@@ -257,10 +258,9 @@ li:empty {
   color: #cc3300; /*orange*/
 }
 
-.featureButton:active {
+.featureButton:focus {
   filter:brightness(150%);
 }
-
 
 #liFeature > ul ul {
   list-style-type: disc;
